--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "stripe": "^11.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
